# Coregrid

./: .gitignore  README.md
backend/: README.md  devs.py  errors.py  main.py  pagination.py  pyproject.toml  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 0ad6f1168f33_qunatity_tweaks.py  2cc4e4b5d935_schemas_init.py  4f72b0ac9d31_add_quantity_units.py  5b0425925f88_tweaks_on_the_db.py  5d7c05bcf2f2_create_check_constraints.py  6816febe64b4_updating_relations.py  7a9d21c8f604_add_sales.py  8cc2700f56ec_remove_stock_movements.py  9eaa6cecf770_initial_schemas.py  9fe56dafaf4d_add_initial_restock_logic.py  a1b2c3d4e5f6_update_supplier_phone_validation.py  b7c9d0e1f2a3_add_low_stock_threshold.py  c2d00b79afe9_add_missing_checks.py  c7d8e9f0a1b2_add_product_tags.py  d267434cc44d_upgrade_restock_logic.py  d2997c9c211b_qunatity_tweaks_2.py  e6a3f4d5c2b1_add_stock_movements.py  ebffd8b37282_add_sale_logic.py  f4a8c9d1e2b3_add_product_pricing_fields.py
backend/app/: config.py  db.py  models.py  pricing.py  schemas.py  tags.py  units.py
backend/routers/: companies.py  products.py  restocks.py  sales.py  stock_movements.py  suppliers.py  tags.py
backend/tests/: test_api.py
database/scripts/: init.sql
docs/: BACKEND.md  DATABASE.md  STOCK_MOVEMENTS.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  config.js  drawer.js  lookups.js  movements.js  products.js  render.js  routing.js  sales.js  state.js  states.js  utils.js
